fix(repo): correct default users TSV path resolution